Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98306

[REG][macOS] Video orientation is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.3, 6.3.0 Alpha
    • 6.2.1, 6.2.2
    • Multimedia
    • None
    • macOS 12.0.1 Monterey
    • macOS
    • 306a07f13d9c72cc89621d317abe7b3cf029105c (qt/qtmultimedia/6.2) 82695e3160f3d2d3198973a24e5480e2ebc1c7d9 (qt/qtmultimedia/dev)

    Description

      Wrong video orientation during playback.

      The issue can be easily reproduced in standard Media Player example.
      You need just open attached video and check how it's played. (It's just a regular Portrait video I recorded on my phone)

      Also MediaPlayer's metaData doesn't contain Orientation value for any video on macOS,
      whereas it contains this for the same video e.g. on Windows. So it's not possible on macOS to set orientation for VideoOutput based on video's orientation in metadata.

      Regression since Qt5.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dorisverria Doris Verria
            studiosus Vladimir Belyavsky
            Votes:
            7 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: