AVFVideoRenderer: Add frame orientation information from video track

Set video orientation and mirrored flag based on the track's preferred
transformation matrix.

Fixes: QTBUG-98306
Pick-to: 6.2
Change-Id: I57e49884408f4f905f982da07eb7eb345764dc31
Reviewed-by: Lars Knoll <lars.knoll@qt.io>